k8s/infrastructure/services/webhook-receiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-receiver
spec:
  type: ClusterIP
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
