k8s/infrastructure/services/webhook-receiver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: traefik-ingress
spec:
  ingressClassName: traefik-ingress
  rules:
    - host: flux-webhook.${domain}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux-webhook.${domain}
      secretName: cluster-issuer-certificate-tls
